--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -147,10 +147,10 @@
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="/{{LANGUAGE_CODE}}/">
 
-                            <img src="{% static 'assets/images/logo.png' %}" class="logo logo-display" alt="">
-                            <img src="{% static 'assets/images/logo-black.png' %}" class="logo logo-scrolled" alt="">
+                            <img src="{% static 'assets/images/logo.png' %}" class="logo logo-display" width="162" alt="">
+                            <img src="{% static 'assets/images/logo.png' %}" class="logo logo-scrolled" width="162" alt="">
 
                         </a>
                     </div>
