--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,7 @@
         {{ form.username }}<br><br>
         <label for="id_password">{% trans 'Password'%}:</label><br><br>
         {{ form.password }}<br><br>
-        <label for="id_repassword">{% trans 'Password (again)'%}:</label<br><br>
+        <label for="id_repassword">{% trans 'Password (again)'%}:</label><br><br>
         {{ form.repassword }}<br><br>
         <input type="hidden" name="langCode" value="{{LANGUAGE_CODE}}">
 
