--- a/app/templates/lore/episode.html
+++ b/app/templates/lore/episode.html
@@ -18,8 +18,13 @@
         <h4>{% trans 'Characters'%}:</h4>
             <ul>
                 {% for a in episode.episode_appearance.distinct %}
-                    <li><a class="character-name-ref area" id="character-name-{{a.character.pk}}" href="/{{LANGUAGE_CODE}}/lore/character/{{ a.character.pk }}/">{{a.character.name}}
-                        <div class="fixed character-popup" id="character-popup-{{a.character.pk}}"></div></a></li>
+                    <li>
+                        <div class="char-container">
+                            <a class="character-name-ref area" id="character-name-{{a.character.pk}}" href="/{{LANGUAGE_CODE}}/lore/character/{{ a.character.pk }}/">{{a.character.name}}
+                            </a>
+                            <div class="fixed character-popup" id="character-popup-{{a.character.pk}}"></div>
+                        </div>
+                    </li>
                 {% endfor %}
             </ul>
     </div>
